# bsi-benchmark

./: .gitignore  CHANGES-2026-07-02.md  CHANGES-2026-07-04.md  MASTER_PROMPT_BSI_v3.4.2.md.1  benchmark_genai_real.json  benchmark_genai_real.md  demo_run.json  json_exporter.py  llm_test.json  llm_test.md  pyproject.toml  real_test.json  real_test.md  real_test2.json  real_test2.md  report.html  test_run.md
articles/: econ_article.json  econ_articles.json  real_articles.json
benchmark/: cli.py
benchmark/benchmark/: run.py
benchmark/config/: config.json
benchmark/engine/: provider_loader.py  retry.py
benchmark/legacy/: build_dataset.py  download_open_access.py
benchmark/providers/: arxiv.py  base.py  crossref.py
benchmark/scripts/: bootstrap.sh
bsi_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configs/: default.json
examples/: README.md  real_bsi_prompt.md  sample_analyzed_dataset.json  sample_bsi_prompt.txt  self_compare_example.json  self_compare_prompt.md
results/: basic_results.sha256  bsi_results.sha256  checksums.sha256  deepseek_test_1.json  deepseek_test_1.md  deepseek_test_2.json  deepseek_test_2.md  metadata.txt  real_test_1.json  real_test_1.md
src/bsi_benchmark/: __init__.py  cli.py  config.py  prompt_loader.py  run_metadata.py  settings.py  utils.py  version.py
tests/: test_arxiv_parser.py  test_cli.py  test_pipeline.py  test_prompt_loader.py  test_provider_registry.py  test_run_metadata.py  test_self_compare.py  yest_run_metadada.py
tests/ab/: test_ab_runner.py  test_batch_evaluation.py  (+3 more)
(+179 files in other folders)
